# ippi_2025

./: README.md  pyproject.toml
docs/source/: api.rst  cli.rst  conf.py  contributing.rst  index.rst  installation.rst
interpolation/: biliniar_interpolation.py
src/interpolation_project/: README.md
src/interpolation_project/interpolation/: biliniar_interpolation.py  l2_interpolation.py
src/interpolation_project/interpolation/biliniar_algorithms/: biliniar_img.py  biliniar_interpolation.py
